--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "stylelint-config-suitcss",
+  "name": "stylelint-config-factorial",
   "version": "6.0.0",
-  "description": "SUIT CSS config for stylelint",
+  "description": "Factorial config for stylelint",
   "keywords": [
     "stylelint",
     "stylelint-config",
@@ -11,10 +11,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/suitcss/stylelint-config-suitcss.git"
+    "url": "https://github.com/factorial-io/stylelint-config-factorial.git"
   },
-  "homepage": "https://github.com/suitcss/stylelint-config-suitcss",
-  "bugs": "https://github.com/suitcss/stylelint-config-suitcss/issues",
+  "homepage": "https://github.com/factorial-io/stylelint-config-factorial",
+  "bugs": "https://github.com/factorial-io/stylelint-config-factorial/issues",
   "main": "index.js",
   "files": [
     "index.js"
